--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>hbp-dome</title>
+    <script>
+        var iScale = 1;
+        iScale = iScale / window.devicePixelRatio;
+        document.write('<meta name="viewport" content="width=device-width,initial-scale=' + iScale + ',minimum-scale=' +
+            iScale + ',maximum-scale=' + iScale + ',user-scalable=no" />');
+        var iWidth = document.documentElement.clientWidth;
+        document.getElementsByTagName('html')[0].style.fontSize = iWidth / 10+ 'px';
+    </script>
   </head>
   <body>
     <div id="app"></div>
